# snake

./: LICENSE  README.md  snake.cabal  stack.yaml
res/: config.json
src/: Main.hs  Stupid.hs
src/Control/: Input.hs  Update.hs
src/Data/: Game.hs  GameObj.hs  Player.hs  Snake.hs
src/Data/Game/: JSON.hs
src/Graphics/: Display.hs  Utils.dyn_hi  Utils.dyn_o  Utils.hi  Utils.hs
