name:                snake
version:             0.1.0.0
description:         Snake created using Haskell and SDL2. Fun coding exercise.
homepage:            https://github.com/thymemanagement/snake.git
license:             BSD3
license-file:        LICENSE
author:              Tim Eppstein
maintainer:          yhtomite@gmail.com
copyright:           2018 Tim Eppstein
category:            Game
build-type:          Simple
cabal-version:       >=1.10
data-files:          res/*.json
extra-source-files:  README.md

executable snake
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Graphics.Display 
                       Graphics.Utils, 
                       Data.Snake, 
                       Data.GameObj, 
                       Data.Player, 
                       Data.Game,
                       Data.Game.JSON, 
                       Control.Input, 
                       Control.Update
                       Paths_snake
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sdl2, mtl, containers, lens, text, time, random, aeson >= 1.3, lens-aeson, colour, vector

executable stupid
  hs-source-dirs:      src
  main-is:             Stupid.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, sdl2
